fix: Snackbar has uneven margins

--- a/src/scss/components/Snackbar.scss
+++ b/src/scss/components/Snackbar.scss
@@ -4,7 +4,7 @@
   // Position
   position: absolute;
   bottom: 6.375rem;
-  left: 0.75rem;
+  left: 1rem;
 
   // Layout
   display: flex;
